# cpp-agent

./: .clangd  .gitignore  CMakeLists.txt  PORTING_STATUS.md  README.md
.github/workflows/: ci.yml
contracts/observable/: async-agent-run.json  capi.json  config-defaults.json  events.json  messages.json  provider-stream-contract.schema.json  react.json  schemas.json  stream-events.schema.json  tool-governance.json  tool-results.json
contracts/public-surface/: capi-runtime-symbols.txt  capi-symbols.txt  public-headers-expert.txt  public-headers-full.txt  public-headers-main.txt
docs/: README.md  architecture.md  async-agent-run.md  autonomous.md  bindings.md  browser.md  build.md  builtins.md  cli.md  config.md  context.md  core.md  evals.md  execution.md  hooks.md  http.md  mcp.md  media.md  memory.md  messages.md  model.md  multi-agent.md  observability.md  orchestration.md  presets.md  realtime.md  release-governance.md  replay.md  runtime-inputs.md  runtime-memory.md  runtime-planning.md  runtime-streaming.md  runtime.md  sandbox.md  scratch.md  server.md  skills.md  tasks.md  tool-client.md  tools.md  (+2 more)
examples/: README.md  evals-basic.cpp  rag-basic.cpp  runner-basic.cpp  tools-and-permissions.cpp  workflow.cpp
examples/capi-bindings/: README.md  c-minimal.c  csharp-minimal.cs  python-minimal.py  rust-minimal.rs
include/: agent_capi.h  agent_capi_full.h
include/agent/: agent.hpp  app_api.hpp  async.hpp  autonomous.hpp  browser.hpp  builtins.hpp  cli.hpp  common.hpp  config.hpp  context.hpp  context_stats.hpp  core.hpp  core_api.hpp  evals.hpp  execution.hpp  full.hpp  hooks.hpp  http.hpp  http_native.hpp  knowledge.hpp  knowledge_base.hpp  knowledge_chunking.hpp  knowledge_core.hpp  knowledge_indexes.hpp  knowledge_ingestion.hpp  knowledge_io.hpp  knowledge_loaders.hpp  knowledge_manager.hpp  knowledge_rerankers.hpp  knowledge_runtime.hpp  mcp.hpp  mcp_native.hpp  media.hpp  media_generation.hpp  media_native.hpp  memory.hpp  memory_layered.hpp  memory_retrieval.hpp  memory_session.hpp  memory_vector.hpp  (+44 more)
include/agent/providers/: native.hpp  openai_compatible.hpp  reasoning.hpp  reasoning_types.hpp
scripts/: check-generated-artifacts.cmake  check-native-boundaries.cmake  check-platform-governance.cmake
src/: agent_capi.cpp  native_agent_cli.cpp
src/agent/: async.cpp  autonomous.cpp  browser.cpp  builtins.cpp  cli.cpp  config.cpp  config_helpers.cpp  config_helpers.hpp  config_provider_registry.cpp  context.cpp  context_stats.cpp  core.cpp  execution.cpp  function_calling_loop.hpp  hooks.cpp  http.cpp  http_native.cpp  knowledge.cpp  knowledge_io.cpp  knowledge_runtime.cpp  llama_cpp_native_binding.cpp  llama_cpp_native_binding_stub.cpp  mcp.cpp  mcp_native.cpp  media.cpp  media_generation.cpp  media_native.cpp  memory.cpp  memory_retrieval.cpp  memory_session.cpp  memory_vector.cpp  messages.cpp  model.cpp  model_providers.cpp  observability.cpp  orchestration.cpp  plan.cpp  presets.cpp  process_hook.cpp  react.cpp  (+18 more)
src/agent/detail/: helpers.cpp  helpers.hpp
src/agent/knowledge/: strategies.cpp
src/agent/memory/: knowledge_base.inc  knowledge_chunking.inc  knowledge_helpers.inc  knowledge_manager.inc  knowledge_rerankers.inc  knowledge_sources.inc  knowledge_stores.inc  knowledge_text_index.inc  knowledge_vector_index.inc  run_transcript_and_layered_memory.inc  session_memory.inc  vector_memory.inc
src/agent/model/: chat_core.inc  core_helpers.inc  embedding_core_helpers.inc  embeddings_core.inc  provider_adapters.inc  provider_embeddings.inc  provider_helpers.inc  provider_protocols.inc  stream_framing.inc  stream_incremental.inc  tagged_reasoning_helpers.inc  usage.inc
src/agent/providers/: native.cpp  openai_compatible.cpp  reasoning.cpp
src/agent/providers/reasoning/: apply.inc  common.inc  mappers.inc  profile_policy.inc  registry.inc  serialization.inc
src/agent/react/: common_foundation.inc  final_answer_validation_helpers.inc  loop.inc  model_calls.inc  parser.inc  prompt_and_observation.inc  runtime_context_helpers.inc  visible_stream_parser.inc
src/agent/runtime/: agent_loop.cpp  agent_runner.cpp  compaction_planner.cpp  compaction_planner.hpp  errors.cpp  helpers.cpp  input_assembler.cpp  internal.hpp  memory_writeback.cpp  memory_writeback.hpp  pipeline.cpp  prompt_context_builder.cpp  prompt_context_builder.hpp  retrieval_context.cpp  retrieval_options.cpp  run_state_codec.cpp  run_state_codec.hpp  runner_builder.cpp  runner_config.cpp  runner_config.hpp  runner_context_stats.cpp  runner_execution.cpp  runner_facades.cpp  runner_kernel.cpp  runner_kernel.hpp  runner_streaming.cpp  runtime_status.cpp  runtime_string_conversions.cpp  skill_preface.cpp  stream_event_reducer.cpp  stream_event_reducer.hpp  tool_batch_executor.cpp  tool_batch_executor.hpp  tool_call_orchestrator.cpp  tool_call_orchestrator.hpp  usage_aggregator.cpp  usage_aggregator.hpp
src/agent/server/: access_control.inc  app_core.inc  approval_codec.inc  approval_routes.inc  approval_stores.inc  async_routes.inc  audit_values.inc  autonomous_routes.inc  chat_routes.inc  governance_policy.inc  governance_summary_values.inc  http_trace_helpers.inc  metrics.inc  query_filters.inc  request_value_parsing.inc  route_modules.inc  routing.cpp  run_result_serialization.inc  session_access.inc  session_routes.cpp  task_routes.inc  value_serialization.inc  workflow_routes.inc  workflow_runtime_access.inc
tests/: capi_ctypes_smoke.py  capi_smoke.c  check_capi_symbols.py  check_doc_example_closure.py  contracts.cpp  native_embedded_smoke.cpp  plan_execute.cpp  smoke.cpp
tests/smoke_chunks/: 01_core_tools_and_server.inc  02_config_runtime_and_permissions.inc  03_knowledge_memory_and_indexes.inc  04_web_media_and_agents.inc  05_models_providers_and_streaming.inc  06_realtime_tasks_and_skills.inc  07_mcp_workflow_and_orchestration.inc  08_replay_eval_and_cancellation.inc  09_harness_improvements.inc
